# mlops-california-housing_v3

./: .env.template  .gitignore  LICENSE  README.md  dvc_setup_instructions.md  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.md  test_data_setup.py
docker/: Dockerfile  Dockerfile.cuda128-share  README-CUDA128-SHARE.md  docker-compose.cuda128-share.yml  docker-compose.yml
scripts/: init_database.py  process_data.py  run_api.py  setup_data.py  test_data_pipeline.py  train_and_dashboard.py  train_models.py  train_simple.py
src/: __init__.py
src/api/: config.py  dependencies.py  endpoints.py  exceptions.py  main.py  metrics.py  middleware.py  model_loader.py
src/data/: data_manager.py  data_pipeline.py  data_utils.py  models.py
src/database/: __init__.py  connection.py  logging.py  models.py
src/utils/: logging_config.py  mlflow_config.py  model_comparison.py
tests/: test_api.py  test_docker_image.py  test_model_comparison.py
